<resources>
    <string name="app_name">电视电话</string>
    <string name="call_video">视频通话</string>
    <string name="call_audio">语音通话</string>
    <string name="answer">接听</string>
    <string name="hang_up">挂断</string>
    <string name="mute">静音</string>
    <string name="qiev">切换摄像头</string>
    <string name="qiev2">切换语音通话</string>
    <string name="switch_view">切换视频窗口</string>
    <string name="del_contacts">删除联系人</string>
    <string name="del_callrecord">删除记录</string>
    <string name="add_contacts">添加联系人</string>
    <string name="edit_contacts">编辑联系人</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_phone">请输入号码</string>
    <string name="back">返回</string>
    <string name="next">下一页</string>
    <string name="welcome">敬请期待</string>
    <string name="welcome2">初次使用请拨打4009900901咨询开通</string>
    <string name="remider">温馨提示</string>
    <string name="calltime_timeout">您已经连续通话超过1小时\n是否继续通话？</string>
    <string name="selectphone_info">确定要使用此号码\n作为您的电视电话本机号码吗？</string>
    <string name="commit">确定</string>
    <string name="product_name">产品名称：</string>
    <string name="order_name">电视电话</string>
    <!--<string name="order_name">电视电话包月（0元/月）</string>-->
    <!--<string name="call_rate">本产品无月租费，通话产生的费用根据实际使用情况收取</string>-->
    <!--<string name="call_rate">产品资费:电视电话包月，月租费0元/月。通话费按当地固话收费标准，根据每月实际使用情况收取。来电显示功能费0元/月，2021年2月1日起5元/月。</string>-->
    <string name="call_rate">产品资费：通话费按固话收费标准收取</string>
    <string name="open_des">用户信息验证</string>
    <!--<string name="open_des">电视电话开通后,话费将产生在:</string>-->
    <string name="card_des">身份证号：</string>
    <string name="user_name">用户姓名：</string>
    <!--<string name="card_des">,身份证后四位</string>-->
    <string name="qrcode_to_add">用手机扫码录入联系人\n更方便哦~</string>
    <string name="input_user_card">(请将身份证后4位补充完整)</string>
</resources>
