<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_dialog">
    <RelativeLayout
        android:id="@+id/order_orderinfo_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginRight="230dp"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/order_product_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/order_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/product_name"/>
            <TextView
                android:id="@+id/order_order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/order_product_name"
                android:textColor="@color/color_orange_1"
                android:textSize="24sp"
                android:text="@string/order_name"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/order_call__rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:text="@string/call_rate"
            android:textSize="24sp"
            android:layout_below="@+id/order_product_rl"/>

        <RelativeLayout
            android:id="@+id/order_userInfo_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/order_call__rate">
            <TextView
                android:id="@+id/order_open_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/open_des"/>
            <TextView
                android:id="@+id/order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/user_name"
                android:layout_below="@id/order_open_des"/>
            <TextView
                android:id="@+id/order_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/order_name"
                android:text="***"
                android:textSize="24sp"
                android:layout_below="@id/order_open_des"
                android:textColor="@color/color_orange_1"/>
            <TextView
                android:id="@+id/order_card_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_name"
                android:textSize="24sp"
                android:text="@string/card_des"/>
            <TextView
                android:id="@+id/order_usercard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_orange_1"
                android:text="****"
                android:textSize="24sp"
                android:layout_below="@+id/order_name"
                android:layout_toRightOf="@+id/order_card_des"/>
            <EditText
                android:id="@+id/order_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_below="@+id/order_name"
                android:ems="2"
                android:inputType="text"
                android:textSize="24sp"
                android:textColor="@color/color_orange_1"
                android:background="@color/color_white"
                android:layout_toRightOf="@+id/order_usercard"
                />
            <TextView
                android:id="@+id/order_callrate_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/order_edit"
                android:textSize="20sp"
                android:layout_below="@+id/order_name"
                android:text="@string/input_user_card"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/order_usered_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:layout_below="@+id/order_orderinfo_rl">
        <RelativeLayout
            android:id="@+id/order_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_calltime_selector"
            android:layout_toLeftOf="@+id/order_view">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="26sp"
                android:duplicateParentState="true"
                android:text="@string/commit"
                android:textColor="@drawable/text_calltime_selector"
                />
        </RelativeLayout>
        <View
            android:id="@+id/order_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            />
        <RelativeLayout
            android:id="@+id/order_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button_calltime_selector"
            android:layout_toRightOf="@+id/order_view">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="26sp"
                android:duplicateParentState="true"
                android:text="@string/back"
                android:textColor="@drawable/text_calltime_selector"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>