<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/relative_bg_calltime">
    <TextView
        android:id="@+id/selectphone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/color_black_47"
        android:text="@string/remider"
        />
    <TextView
        android:id="@+id/selectphone_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/color_gray_90"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/selectphone_title"
        android:layout_marginTop="30dp"
        android:text="@string/calltime_timeout"
        android:textSize="31sp"/>
    <RelativeLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/selectphone_info">
        <RelativeLayout
            android:id="@+id/selectphone_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_calltime_selector"
            android:layout_toLeftOf="@+id/selectphone_view">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="27sp"
                android:duplicateParentState="true"
                android:text="@string/hang_up"
                android:textColor="@drawable/text_calltime_selector"
                />
        </RelativeLayout>
        <View
            android:id="@+id/selectphone_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            />
        <RelativeLayout
            android:id="@+id/selectphone_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_calltime_selector"
            android:layout_toRightOf="@+id/selectphone_view">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="27sp"
                android:duplicateParentState="true"
                android:text="@string/back"
                android:textColor="@drawable/text_calltime_selector"
                />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>