<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_add_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:background="@drawable/dialog_addbg_shape"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/add_dialog_rl1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="390dp"
            android:clipToPadding="true"
            android:clipChildren="true">

            <EditText
                android:id="@+id/add_usernameedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/color_black_4a"
                android:hint="@string/input_name"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/color_gray_91"
                android:textCursorDrawable="@drawable/edit_cursor_shape"
                android:textSize="30sp"
                android:ems="11"
                android:background="@drawable/edit_input2_selector"
            />

            <EditText
                android:id="@+id/add_phoneedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/color_black_4a"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/add_usernameedit"
                android:textCursorDrawable="@drawable/edit_cursor_shape"
                android:textSize="30sp"
                android:inputType="number"
                android:hint="@string/input_phone"
                android:textColorHint="@color/color_gray_91"
                android:background="@drawable/edit_input2_selector"
                android:ems="11"
                />

            <RelativeLayout
                android:id="@+id/add_contacts_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/add_phoneedit"
                android:layout_marginTop="40dp">
                <Button
                    android:id="@+id/add_save_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_add_selector"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@drawable/button_addtext_selector"
                    android:text="@string/save"/>

                <Button
                    android:id="@+id/add_cancel_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:textColor="@drawable/button_addtext_selector"
                    android:layout_toRightOf="@+id/add_save_but"
                    android:background="@drawable/button_add_selector"
                    android:textSize="20dp"
                    android:text="@string/cancel"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_dialog_rl2"
            android:layout_width="wrap_content"
            android:layout_height="390dp"
            android:layout_toRightOf="@+id/add_dialog_rl1">

            <ImageView
                android:id="@+id/add_qrcode_image"
                android:layout_marginTop="33dp"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/add_qrcode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black_4a"
                android:textSize="26dp"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/add_qrcode_image"
                android:text="@string/qrcode_to_add"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>