<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_90">

    <Button
        android:id="@+id/add_call_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/relative_back_selector"
        android:textSize="28sp"
        android:text="@string/back"/>
    <RelativeLayout
        android:layout_width="393dp"
        android:layout_height="493dp"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:background="@drawable/dialog_bg_shape"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/add_callaudio_rl1"
            android:layout_width="299dp"
            android:layout_height="70dp"
            android:layout_marginTop="64dp"
            android:focusable="true"
            android:background="@drawable/relative_dialog_bg"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/add_callaudio_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:duplicateParentState="true"
                android:layout_marginLeft="63dp"
                android:src="@drawable/image_focus_callaudio2"/>
            <TextView
                android:id="@+id/add_callaudio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:textSize="28sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:textColor="@drawable/text_dialog_selector"
                android:layout_toRightOf="@id/add_callaudio_img"
                android:text="@string/call_audio"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_callvideo_rl1"
            android:layout_width="299dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:background="@drawable/relative_dialog_bg"
            android:layout_below="@+id/add_callaudio_rl1"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/add_callvideo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="63dp"
                android:src="@drawable/image_focus_callvideo2"/>
            <TextView
                android:id="@+id/add_callvideo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_centerVertical="true"
                android:duplicateParentState="true"
                android:textColor="@drawable/text_dialog_selector"
                android:layout_marginLeft="23dp"
                android:layout_toRightOf="@id/add_callvideo_img"
                android:text="@string/call_video"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/add_updae_rl1"
            android:layout_width="299dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:background="@drawable/relative_dialog_bg"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/add_callvideo_rl1">
            <ImageView
                android:id="@+id/add_add_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="63dp"
                android:src="@drawable/image_focus_editcall"/>
            <TextView
                android:id="@+id/add_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_centerVertical="true"
                android:duplicateParentState="true"
                android:layout_marginLeft="23dp"
                android:textColor="@drawable/text_dialog_selector"
                android:layout_toRightOf="@id/add_add_img"
                android:text="@string/edit_contacts"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/add_del_rl1"
            android:layout_width="299dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:background="@drawable/relative_dialog_bg"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/add_updae_rl1">
            <ImageView
                android:id="@+id/add_del_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="63dp"
                android:src="@drawable/image_focus_del2"/>
            <TextView
                android:id="@+id/add_del_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_centerVertical="true"
                android:duplicateParentState="true"
                android:layout_marginLeft="23dp"
                android:textColor="@drawable/text_dialog_selector"
                android:layout_toRightOf="@id/add_del_img"
                android:text="@string/del_contacts"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>